<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="text" translatable="false">Text</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share_app">Share app</string>
    <string name="write_to_support">Write to support</string>
    <string name="license_agreement">License agreement</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>

    <string name="developer_email" translatable="false">garmozanikita@gmail.com</string>
    <string name="support_email_subject">Message to the developers and developers of the Playlist Maker application</string>
    <string name="support_email_body">Thanks to the developers for the cool application!</string>
    <string name="ya_practicum_android_course_url" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="ya_practicum_license_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer</string>

    <string name="placeholder_message_not_found">Nothing found</string>
    <string name="placeholder_message_network_problem">Network problems</string>
    <string name="placeholder_aditional_message_network_problems">Upload failed. Check your internet connection</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>

    <string name="track_label">Track label</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="track_not_available">The track is not available</string>

    <string name="favorites_tracks">Favorites tracks</string>
    <string name="playlists">Playlists</string>
    <string name="your_library_is_empty">Your library is empty</string>
    <string name="you_have_not_playlists">You haven\'t created\nany playlists yet</string>
    <string name="new_playlist">New playlist</string>
    <string name="create">Create</string>
    <string name="name_required">Name*</string>
    <string name="description">Description</string>
    <string name="playlist_label">Playlist label</string>
    <string name="add_to_playlist">Add to playlist</string>

    <string name="finish_creating_the_playlist">Finish creating the playlist?</string>
    <string name="all_unsaved_data_will_be_lost">All unsaved data will be lost</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_has_been_crated">The %s playlist been created</string>

    <plurals name="number_of_tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <string name="added_to_playlist">Added to playlist %s</string>
    <string name="track_already_in_playlist">The track is already in the playlist %s</string>

    <plurals name="number_of_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="want_to_delete_track">Do you want to delete a track?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_share_empty_playlist">This playlist doesn\'t have a shareable track list</string>
    <string name="share">Share</string>
    <string name="edit_information">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="want_to_delete_playlist">Want to delete the «%s» playlist?</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_tracks_in_playlist">There are no tracks in the playlist</string>

    <string name="music_service_notification_channel_name">Music service</string>
    <string name="music_service_notification_channel_description">Service for playing music</string>
    <string name="music_service_notification_title" translatable="false">Playlist Maker</string>
    <string name="music_service_notification_text" translatable="false">%s - %s</string>
</resources>