<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarSettings"
        style="@style/ToolbarWithNavigationIconStyle"
        android:layout_marginBottom="@dimen/header_margin_bottom"
        android:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/MenuItemStyle"
        android:layout_gravity="end"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/textViewShareApp"
        style="@style/TextViewMenuItemWithIconStyle"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/textViewSupport"
        style="@style/TextViewMenuItemWithIconStyle"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/textViewLicenseAgreement"
        style="@style/TextViewMenuItemWithIconStyle"
        android:text="@string/license_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>