<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_margin_bottom"
        android:title="@string/settings"
        android:titleTextColor="@color/app_black"
        android:navigationIcon="@drawable/ic_arrow_back" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingHorizontal="@dimen/screen_horizontal_indent"
        android:paddingVertical="@dimen/settings_menu_item_padding_vertical"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/menu_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingHorizontal="@dimen/screen_horizontal_indent"
        android:paddingVertical="@dimen/settings_menu_item_padding_vertical"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/menu_text_size"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingHorizontal="@dimen/screen_horizontal_indent"
        android:paddingVertical="@dimen/settings_menu_item_padding_vertical"
        android:text="@string/write_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/menu_text_size"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingHorizontal="@dimen/screen_horizontal_indent"
        android:paddingVertical="@dimen/settings_menu_item_padding_vertical"
        android:text="@string/license_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/menu_text_size"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>