<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:background="@color/app_blue"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/app_black"
        android:textSize="@dimen/font_size_title"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/app_black"
        app:cornerRadius="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/library"
        android:textColor="@color/app_black"
        android:textSize="@dimen/font_size_title"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/app_black"
        app:cornerRadius="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/app_black"
        android:textSize="@dimen/font_size_title"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/app_black"
        app:cornerRadius="16dp" />

</LinearLayout>